[package]
name = "pw"
version = "0.1.0"
edition = "2021"
description = "A command line password manager"
license = "Apache-2.0"

[dependencies]
serde = { version = "~1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "~2.0.9"
anyhow = "~1.0.95"
clap = { version = "~4.5.23", features = ["derive"] }
dirs = "~5.0.1"
clippers = "~0.1.2"
rand = "~0.8.5"
rand_chacha = "~0.3.1"
