[package]
name = "pw"
version = "0.1.2"
edition = "2021"
description = "A command line password manager"
license = "Apache-2.0"

[dependencies]
serde = { version = "~1.0.217", features = ["derive"] }
serde_json = "~1.0.134"
thiserror = "~2.0.9"
rand = "~0.8.5"
rand_chacha = "~0.3.1"

# bin dependencies
anyhow = "~1.0.95"
clap = { version = "~4.5.23", features = ["derive"] }
clippers = "~0.1.2"
dirs = "~5.0.1"

[dev-dependencies]
assert_cmd = "~2.0.16"
assert_fs = "~1.1.2"
assertables = "~9.5.0"
predicates = "~3.1.3"
