[package]
name = "pw"
version = "0.2.1"
edition = "2021"
description = "A command line password manager"
license = "Apache-2.0"

[dependencies]
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
thiserror = "~2.0.18"
rand = "~0.10.1"
rand_chacha = "~0.10.0"
scrypt = { version = "~0.12.0", default-features = false }
aes = "~0.9.1"
ctr = "~0.10.1"
hmac = "~0.13.0"
sha2 = "~0.11.0"
zeroize = { version = "~1.8.2", features = ["derive"] }

# bin dependencies
anyhow = "~1.0.102"
clap = { version = "~4.6.1", features = ["derive"] }
clippers = "~0.1.2"
dirs = "~6.0.0"
rpassword = "7.5.4"

[dev-dependencies]
assert_cmd = "~2.2.2"
assert_fs = "~1.1.4"
predicates = "~3.1.4"
tempfile = "~3"
